[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/player_monster_3.gd" type="Script" id=1]
[ext_resource path="res://assets/monster_3_player.png" type="Texture" id=2]
[ext_resource path="res://assets/player.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]

resource/name = "fire"
length = 0.9
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotate_head/head:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.4, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.35, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [ "en_orb_atk_grow" ],
"method": "play_event"
}, {
"args": [  ],
"method": "_on_fire_bullet"
} ]
}

[sub_resource type="Animation" id=2]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("rotate_head/head:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotate_head/head:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.2 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_running_dust"
} ]
}

[sub_resource type="Animation" id=4]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 78, 79, 80, 81, 82, 83, 84, 85 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 32, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate_head:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]

length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("fx:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.8 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fx:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 85, 84, 83, 82, 81, 80, 79, 78 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 32 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rotate_head/head:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="player_monster_3" type="Sprite"]

offset = Vector2( 0, -11 )
vframes = 5
hframes = 8
script/script = ExtResource( 1 )

[node name="rotate_head" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="head" type="Sprite" parent="rotate_head"]

texture = ExtResource( 2 )
offset = Vector2( 0, -6 )
vframes = 4
hframes = 8
frame = 16
__meta__ = {
"_edit_lock_": true
}

[node name="fx" type="Sprite" parent="."]

visibility/visible = false
texture = ExtResource( 3 )
offset = Vector2( 0, -12 )
vframes = 12
hframes = 8
frame = 85
__meta__ = {
"_edit_lock_": true
}

[node name="anim_body" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fire = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="anim_fx" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/arrive = SubResource( 4 )
anims/leave = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="finished" from="anim_body" to="." method="_on_anim_body_finished"]

[connection signal="finished" from="anim_fx" to="." method="_on_anim_fx_finished"]


